# embedding-model-api

./: .dockerignore  Dockerfile  README.md  config.py  index.html  main.py  pyproject.toml  requirements.txt
api/: main.py
app/: main.py  schemas.py
app/core/: config.py  exceptions.py  logging.py  models.py  tts.py
app/routes/: __init__.py  health.py  image.py  similarity.py  text.py  tts.py
tests/: test_api.py
