[project]
name = "embedding-model-api"
version = "0.1.0"
description = "Embedding Model API using FastEmbed"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "fastembed",
    "pillow",
    "numpy",
    "pydantic",
    "python-multipart",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"