[project]
name = "embedding-model-api"
version = "1.0.0"
description = "FastAPI-based embedding API with CLIP text/image embeddings + TTS"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "fastembed>=0.4.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
    "pocket-tts>=2.1.0",
    "scipy>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "pytest",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.25.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
